changed to name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>P. Colin Manikoth</title>
+  <title>Eduardo Duran-Salinas</title>
  
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
@@ -14,7 +14,7 @@
 	
 	<article>
 	
-	    <h1>P. Colin Manikoth</h1>
+	    <h1>Eduardo Duran-Salinas</h1>
 	    
 	    <img src="http://placebeyonce.com/400-300" alt="">
 	    
