--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	    <h1>Eduardo Duran-Salinas</h1>
 	    
-	    <img src="http://placebeyonce.com/400-300" alt="">
+	    <img src="http://placebeyonce.com/400-300" alt="" class="animated">
 	    
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aut sed magni unde laborum. Aliquid magni laboriosam, cumque eos ex quasi repudiandae commodi tempora similique quas fuga, vel sunt quisquam.</p>
 
