added image for background

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   	
   	<script src="js/lettering.js"></script>
   	
-  	<script src="js/scripts.js"></script>
+  	<script src="js/backstretch.js"></script>
 
 </body>
 </html>
