--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   	<script src="js/lettering.js"></script>
   	
   	<script src="js/backstretch.js"></script>
+  	
+  	<script src="js/plugin.js"></script>
+  	
+  	<script src="js/scripts.js"></script>
 
 </body>
 </html>
