removed beyonce pics

--- a/index.html
+++ b/index.html
@@ -21,24 +21,12 @@
 
         <main>
 
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
-            <section class="venti">
-                <img src="http://placebeyonce.com/400-400" alt="">
-            </section>
+            <section class="venti"></section>
+            <section class="venti"></section>
+            <section class="venti"></section>
+            <section class="venti"></section>
+            <section class="venti"></section>
+            <section class="venti"></section>
 
         </main>
         
