added pictures, edited masonry

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
 
-        <article>
-        
+    <article>
+
         <h1>Eduardo Duran </h1>
 
         <img class="me" src="img/me.jpg" alt="">
@@ -34,12 +34,18 @@
 
         <main>
 
-            <section class="venti"></section>
-            <section class="venti"></section>
-            <section class="venti"></section>
-            <section class="venti"></section>
-            <section class="venti"></section>
-            <section class="venti"></section>
+            <section class="venti">
+                <img src="img/can2.jpg" alt="">
+            </section>
+            <section class="venti">
+                <img src="img/poster.jpg" alt="">
+            </section>
+            <section class="venti">
+                <img src="img/gmod.jpg" alt="">
+            </section>    
+            <section class="venti">
+                <img src="img/can.jpg" alt="">
+            </section>
 
         </main>
 
