added links and images

--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 
         <nav class="links">
             <ul>
-                <li><a href="#">Link A</a></li>
-                <li><a href="#">Link B</a></li>
-                <li><a href="#">Link C</a></li>
+                <li>
+                    <a href="http://github.com/eduran2">
+                        <img src="img/github.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="http://facebook.com/eduardoduran62">
+                        <img src="img/fb.png" alt=""></a>
+                </li>
             </ul>
         </nav>
 
@@ -42,7 +47,7 @@
             </section>
             <section class="venti">
                 <img src="img/gmod.jpg" alt="">
-            </section>    
+            </section>
             <section class="venti">
                 <img src="img/can.jpg" alt="">
             </section>
