--- a/index.html
+++ b/index.html
@@ -20,22 +20,9 @@
 
         <img class="me" src="img/me.jpg" alt="">
 
-        <p>My name is Eduardo Duran-Salinas. I am a senior in college and am majoring in Graphic Design with a minor in Film.</p>
+        <p>My name is Eduardo Duran-Salinas. I am a senior in college and am majoring in Graphic Design. I am also in pursuit of a UX Certificate.</p>
 
-        <h2>Let's get Connected</h2>
-
-        <nav class="links">
-            <ul>
-                <li>
-                    <a href="http://github.com/eduran2">
-                        <img src="img/github.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="http://facebook.com/eduardoduran62">
-                        <img src="img/fb.png" alt=""></a>
-                </li>
-            </ul>
-        </nav>
+        <h2>My Design Work</h2>
 
         <main>
 
@@ -53,6 +40,21 @@
             </section>
 
         </main>
+
+        <h3>Let's get Connected</h3>
+
+        <nav class="links">
+            <ul>
+                <li>
+                    <a href="http://github.com/eduran2">
+                        <img src="img/github.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="http://facebook.com/eduardoduran62">
+                        <img src="img/fb.png" alt=""></a>
+                </li>
+            </ul>
+        </nav>
 
     </article>
 
