--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h2>My Design Work</h2>
 
         <main>
+            <a class="fancybox" href="img/can2.jpg"></a>
 
             <section class="venti">
                 <img src="img/can2.jpg" alt="">
@@ -65,6 +66,8 @@
     <script src="js/masonry.js"></script>
 
     <script src="js/lettering.js"></script>
+    
+    <script src="js/fancybox.js"></script>
 
     <script src="js/backstretch.js"></script>
 
